apport (1.7-0ubuntu3) UNRELEASED; urgency=low

  * data/general-hooks/ubuntu.py: File update-grub bugs on grub2 instead of
    grub if appropriate.
  * apport/hookutils.py: Add command_available method, and use it to add
    prtconf and pccardctl output if those commands are available.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 09 Aug 2009 11:55:59 +0100

apport (1.7-0ubuntu2) karmic; urgency=low

  [ Matt Zimmerman ]
  * data/general-hooks/ubuntu.py: Detect when a kernel upgrade failure is
    caused by update-grub failing, and file the bug on grub instead of linux
  * data/general-hooks/ubuntu.py: Detect when a kernel upgrade failure is
    caused by update-initramfs failing, and file the bug on initramfs-tools
    instead of linux
  * data/package-hooks/source_linux.py: Per discussion with ogasawara, attach
    ALSA details on kernel bug reports by default.  About 9% of sampled kernel
    bugs are audio-related.
  * data/package-hooks/source_linux.py: Add linux-firmware version to kernel
    bug reports
  * apport/hookutils.py: Add attach_wifi function with wifi-related debug info
  * data/package-hooks/source_linux.py: Attach wifi info by default to kernel
    bugs

  [ Martin Pitt ]
  * Merge trunk:
    - report.py, add_hooks_info(): Add optional package/srcpackage argument.
    - Implemented ui_question_userpass [Caio Romão].

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 08 Aug 2009 12:20:39 +0200

apport (1.7-0ubuntu1) karmic; urgency=low

  * New upstream release:
    - Add support for symptoms.
  * debian/control: Recommend apport-symptoms.
  * debian/local/ubuntu-bug: When called without arguments, run in "show
    available symptoms" mode.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 05 Aug 2009 19:32:39 +0100

apport (1.6-0ubuntu3) karmic; urgency=low

  * Merge trunk:
    - apport-gtk: Fix ordering of choices
    - bin/package_hook: Fix crash for subdirectories in log dir. (LP: #332350)