@@ -4,6 +4,9 @@ apport (1.7-0ubuntu3) UNRELEASED; urgency=low
     grub if appropriate.
   * apport/hookutils.py: Add command_available method, and use it to add
     prtconf and pccardctl output if those commands are available.
+  * data/package-hooks/source_debian-installer.py: New hook, providing
+    roughly the same information as is provided by the 'report-hw' tool in
+    installation-report.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Sun, 09 Aug 2009 11:55:59 +0100
 
